# portal-dna

./: Makefile
hc_utils/: Cargo.toml
portal_types/: Cargo.toml
zomes/portal/: Cargo.toml
zomes/portal_api/: Cargo.toml
