[package]
name = "portal_api"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"

[lib]
name = "portal_api"
crate-type = ["cdylib", "rlib"]

[dependencies]
hc_crud_caps = { git = "https://github.com/mrruby/rust-hc-crud-caps", rev = "2c5494834d8ba55bb3f5d1f30352e35cee947513"}
hc_utils = {path = "../../hc_utils"}
hdk = "0.2.2"
hex = "0"
portal = {path = "../portal"}
rand = "0.8.5"
rmpv = { version = "1.0.0", features = ["with-serde"] }
serde = "1"
thiserror = "1"
